--- a/style.css
+++ b/style.css
@@ -1,32 +1,13 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background-color:#FAD017;
     color: #070707;
 }
 
-strong{
+.titulo-destaque{
     color: #5C1317;
 }
-
-h1{
-    font-weight: bold;
-}
-
-span{
-    color: #5C1317;
-}
-
-a:link, a:visited {
-    background-color: #5C1317;
-    color: #fbfbf9;
-    padding: 14px 25px;
-    text-decoration: none;
-    border-radius: 25px;
-    width: 25px;
-    height: 14px;
-    text-align: center;
-  }
-
-  a:hover, a:active {
-    background-color: #3d0d0f;
-    color: white;
-  }
