--- a/style.css
+++ b/style.css
@@ -1,13 +1,38 @@
+@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 *{
     margin: 0;
     padding: 0;
 }
 
 body {
+    height:100vh;
+    box-sizing: border-box;
     background-color:#FAD017;
     color: #070707;
 }
 
 .titulo-destaque{
     color: #5C1317;
+}
+
+.apresentacao{
+    margin:8%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.apresentacao__conteudo{
+    width:615px;
+}
+
+.apresentacao__conteudo__titulo{
+    font-size: 36px;
+    font-family: "Krona One", sans-serif;
+}
+
+.apresentacao__conteudo__texto {
+    font-size:24px;
+    font-family: 'Monserrat', sans-serif;
 }
