--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 .apresentacao{
-    margin:8%;
+    margin: 10% 6%; 
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -25,6 +25,10 @@ body {
 
 .apresentacao__conteudo{
     width:615px;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+
 }
 
 .apresentacao__conteudo__titulo{
@@ -35,4 +39,22 @@ body {
 .apresentacao__conteudo__texto {
     font-size:24px;
     font-family: "Roboto Condensed", sans-serif;
+}
+
+.apresentacao__links{
+    display: flex;
+    justify-content: space-between;
+}
+
+.apresentacao__links__link{
+    background-color:#991b21eb;
+    width: 260px;px;
+    text-align: center;
+    border-radius: 16px;
+    font-size: 24px;
+    padding: 21.5px 0;
+    text-decoration: none;
+    color: #000000;
+    font-family: "Roboto Condensed", sans-serif;
+    font-weight: 600;
 }
