--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ body {
 
 .apresentacao__links__link{
     background-color:#991b21eb;
-    width: 260px;px;
+    width: 260px;
     text-align: center;
     border-radius: 16px;
     font-size: 24px;
