--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 .apresentacao{
-    margin: 10% 6%; 
+    margin: 10% 15%; 
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -39,22 +39,33 @@ body {
 .apresentacao__conteudo__texto {
     font-size:24px;
     font-family: "Roboto Condensed", sans-serif;
+    font-weight: 300;
 }
 
 .apresentacao__links{
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
+    align-items: center;
+    gap: 32px;
+}
+
+.apresentacao__links__subtitulo{
+    font-family: "Roboto Condensed", sans-serif;
+    font-weight: 500;
+    font-size: 24px;
 }
 
 .apresentacao__links__link{
-    background-color:#991b21eb;
-    width: 260px;
+    /* background-color:#991b21eb; */
+    border: 2px solid #5C1317;
+    width: 378px;
     text-align: center;
-    border-radius: 16px;
+    border-radius: 8px;
     font-size: 24px;
     padding: 21.5px 0;
     text-decoration: none;
-    color: #000000;
+    color: #5C1317;
     font-family: "Roboto Condensed", sans-serif;
     font-weight: 600;
 }
