--- a/style.css
+++ b/style.css
@@ -23,6 +23,12 @@ body {
     justify-content: space-between;
 }
 
+.apresentacao__imagem{
+    max-width: 450px;
+    width: auto;
+    height: auto;
+}
+
 .apresentacao__conteudo{
     width:615px;
     display: flex;
@@ -39,7 +45,7 @@ body {
 .apresentacao__conteudo__texto {
     font-size:24px;
     font-family: "Roboto Condensed", sans-serif;
-    font-weight: 300;
+    font-weight: 350;
 }
 
 .apresentacao__links{
@@ -52,20 +58,34 @@ body {
 
 .apresentacao__links__subtitulo{
     font-family: "Roboto Condensed", sans-serif;
-    font-weight: 500;
+    font-weight: 700;
     font-size: 24px;
 }
 
 .apresentacao__links__link{
     /* background-color:#991b21eb; */
-    border: 2px solid #5C1317;
-    width: 378px;
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+    border: 5px solid #5C1317;
+    width: 300px;
     text-align: center;
     border-radius: 8px;
     font-size: 24px;
-    padding: 21.5px 0;
+    padding: 20.5px 0;
     text-decoration: none;
     color: #5C1317;
     font-family: "Roboto Condensed", sans-serif;
     font-weight: 600;
+}
+
+.apresentacao__links__link:hover{
+    background-color:#fdd834;
+}
+
+.apresentacao__links__link__icon{
+    filter: invert(10%) sepia(40%) saturate(4989%) hue-rotate(341deg) brightness(90%) contrast(96%);
+    max-width: 30px;
+    width: auto;
+    height: auto;
 }
