--- a/styles/style.css
+++ b/styles/style.css
@@ -6,10 +6,29 @@
 }
 
 body {
-    height:100vh;
+    /* height:100vh; */
     box-sizing: border-box;
     background-color:#FAD017;
     color: #070707;
+}
+
+.cabecalho{
+padding: 2% 0% 0% 15%;
+
+}
+
+.cabecalho__menu{
+    display: flex;
+    gap: 80px;
+}
+
+
+.cabecalho__menu__link{
+    font-family: "Roboto Condensed", sans-serif;
+    font-size: 24px;
+    font-weight: 600;
+    color:#5C1317;
+    text-decoration: none;
 }
 
 .titulo-destaque{
@@ -17,7 +36,7 @@ body {
 }
 
 .apresentacao{
-    margin: 10% 15%; 
+    padding: 5% 15%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -68,7 +87,7 @@ body {
     justify-content: center;
     gap: 16px;
     border: 5px solid #5C1317;
-    width: 300px;
+    width: 350px;
     text-align: center;
     border-radius: 8px;
     font-size: 24px;
@@ -88,4 +107,14 @@ body {
     max-width: 30px;
     width: auto;
     height: auto;
+}
+
+.rodape{
+    padding: 24px;
+    color:#FAD017;
+    background-color: #5C1317;
+    text-align: center;
+    font-family: "Roboto Condensed", sans-serif;
+    font-size: 24px;
+    font-weight: 400;
 }
