--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
+:root{
+    --cor-primaria: #EEEDEB;
+    --cor-secundaria: #3C3633;
+    --cor-terciaria: #747264;
+    --cor-hover: #E0CCBE ;
+
+    --fonte-primaria: "Oswald", sans-serif;
+    --fonte-secundaria: "Roboto Condensed", sans-serif;
+    --filtro: invert(46%) sepia(16%) saturate(304%) hue-rotate(15deg) brightness(92%) contrast(83%);
+}
 
 *{
     margin: 0;
@@ -8,8 +18,8 @@
 body {
     /* height:100vh; */
     box-sizing: border-box;
-    background-color:#FAD017;
-    color: #070707;
+    background-color:var(--cor-primaria);
+    color: var(--cor-secundaria);
 }
 
 .cabecalho{
@@ -24,15 +34,15 @@ padding: 2% 0% 0% 15%;
 
 
 .cabecalho__menu__link{
-    font-family: "Roboto Condensed", sans-serif;
+    font-family: var(--fonte-secundaria);
     font-size: 24px;
     font-weight: 600;
-    color:#5C1317;
+    color: var(--cor-terciaria);
     text-decoration: none;
 }
 
 .titulo-destaque{
-    color: #5C1317;
+    color:var(--cor-terciaria);
 }
 
 .apresentacao{
@@ -58,13 +68,14 @@ padding: 2% 0% 0% 15%;
 
 .apresentacao__conteudo__titulo{
     font-size: 36px;
-    font-family: "Oswald", sans-serif;
+    font-family: var(--fonte-primaria);
 }
 
 .apresentacao__conteudo__texto {
     font-size:24px;
-    font-family: "Roboto Condensed", sans-serif;
+    font-family: var(--fonte-secundaria);
     font-weight: 350;
+    padding-right: 13%;
 }
 
 .apresentacao__links{
@@ -76,7 +87,7 @@ padding: 2% 0% 0% 15%;
 }
 
 .apresentacao__links__subtitulo{
-    font-family: "Roboto Condensed", sans-serif;
+    font-family: var(--fonte-secundaria);
     font-weight: 700;
     font-size: 24px;
 }
@@ -88,42 +99,42 @@ padding: 2% 0% 0% 15%;
     align-items: flex-start;
     gap: 32px;
     font-size:24px;
-    font-family: "Roboto Condensed", sans-serif;
+    font-family: var(--fonte-secundaria);
     font-weight: 400;
-    border: 5px solid #070707;
+    border: 5px solid var(--cor-secundaria);
     padding: 20.5px 70px;
     border-radius: 8px;
-    color: rgb(0, 0, 0);
-    background-color: #fdd834;
+    color: var(--cor-secundaria);
+    background-color: var(--cor-primaria);
 }
 
 .apresentacao__links__cursos__destaque{
-    color:#5C1317;
+    color:var(--cor-terciaria);
 }
 
 .apresentacao__links__link{
-    /* background-color:#991b21eb; */
     display: flex;
     justify-content: center;
     gap: 16px;
-    border: 5px solid #5C1317;
+    border: 5px solid var(--cor-terciaria);
     width: 350px;
     text-align: center;
     border-radius: 8px;
     font-size: 24px;
     padding: 20.5px 0;
     text-decoration: none;
-    color: #5C1317;
-    font-family: "Roboto Condensed", sans-serif;
+    color: var(--cor-terciaria);
+    font-family: var(--fonte-secundaria);
     font-weight: 600;
 }
 
 .apresentacao__links__link:hover{
-    background-color:#fdd834;
+    background-color:var(--cor-hover);
 }
 
 .apresentacao__links__link__icon{
-    filter: invert(10%) sepia(40%) saturate(4989%) hue-rotate(341deg) brightness(90%) contrast(96%);
+    display: flex;
+    filter: var(--filtro);
     max-width: 30px;
     width: auto;
     height: auto;
@@ -131,10 +142,10 @@ padding: 2% 0% 0% 15%;
 
 .rodape{
     padding: 24px;
-    color:#FAD017;
-    background-color: #5C1317;
+    color:var(--cor-primaria);
+    background-color: var(--cor-terciaria);
     text-align: center;
-    font-family: "Roboto Condensed", sans-serif;
+    font-family: var(--fonte-secundaria);
     font-size: 24px;
     font-weight: 400;
 }
