--- a/styles/style.css
+++ b/styles/style.css
@@ -35,7 +35,7 @@ padding: 2% 0% 0% 15%;
 
 .cabecalho__menu__link{
     font-family: var(--fonte-secundaria);
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 600;
     color: var(--cor-terciaria);
     text-decoration: none;
@@ -50,16 +50,12 @@ padding: 2% 0% 0% 15%;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 82px;
 }
 
-.apresentacao__imagem{
-    max-width: 450px;
-    width: auto;
-    height: auto;
-}
 
 .apresentacao__conteudo{
-    width:615px;
+    width: 50%;
     display: flex;
     flex-direction: column;
     gap: 40px;
@@ -67,12 +63,12 @@ padding: 2% 0% 0% 15%;
 }
 
 .apresentacao__conteudo__titulo{
-    font-size: 36px;
+    font-size: 2.25rem;
     font-family: var(--fonte-primaria);
 }
 
 .apresentacao__conteudo__texto {
-    font-size:24px;
+    font: size 1.5rem;;
     font-family: var(--fonte-secundaria);
     font-weight: 350;
     padding-right: 13%;
@@ -89,7 +85,7 @@ padding: 2% 0% 0% 15%;
 .apresentacao__links__subtitulo{
     font-family: var(--fonte-secundaria);
     font-weight: 700;
-    font-size: 24px;
+    font-size: 1.5rem;
 }
 
 .apresentacao__links__cursos{
@@ -98,7 +94,7 @@ padding: 2% 0% 0% 15%;
     justify-content: space-between;
     align-items: flex-start;
     gap: 32px;
-    font-size:24px;
+    font-size: 1.5rem;;
     font-family: var(--fonte-secundaria);
     font-weight: 400;
     border: 5px solid var(--cor-secundaria);
@@ -112,15 +108,15 @@ padding: 2% 0% 0% 15%;
     color:var(--cor-terciaria);
 }
 
-.apresentacao__links__link{
+.apresentacao__links__navegacao{
     display: flex;
     justify-content: center;
     gap: 16px;
     border: 5px solid var(--cor-terciaria);
-    width: 350px;
+    width: 50%;
     text-align: center;
     border-radius: 8px;
-    font-size: 24px;
+    font-size: 1.5rem;
     padding: 20.5px 0;
     text-decoration: none;
     color: var(--cor-terciaria);
@@ -128,7 +124,7 @@ padding: 2% 0% 0% 15%;
     font-weight: 600;
 }
 
-.apresentacao__links__link:hover{
+.apresentacao__links__navegacao:hover{
     background-color:var(--cor-hover);
 }
 
@@ -140,12 +136,37 @@ padding: 2% 0% 0% 15%;
     height: auto;
 }
 
+.apresentacao__imagem{
+    max-width: 50%;
+    width: auto;
+    height: auto;
+}
+
 .rodape{
     padding: 24px;
     color:var(--cor-primaria);
     background-color: var(--cor-terciaria);
     text-align: center;
     font-family: var(--fonte-secundaria);
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 400;
+}
+
+@media (max-width: 1200px){
+    .cabecalho{
+        padding: 10%;
+    }
+
+    .cabecalho__menu{
+        justify-content: center;
+    }
+
+    .apresentacao{
+        flex-direction: column-reverse;
+        padding: 5%;
+    }
+
+    .apresentacao__conteudo{
+        width: auto;
+    }
 }
